--- a/leelovedam.html
+++ b/leelovedam.html
@@ -1,31 +1,16 @@
 <!DOCTYPE html>
-  <head>
-    <title>Home - 🦉Dam🦉</title>
-    <link rel="shortcut icon" href="image/steam.ico" />
-    <meta charset="utf-8" />
-    <meta name="description" content="I love Dam" />
-  </head>
-  <body>
-    <a href="http://google.com" target="_blank"
-      ><dialog open><p>😍I love Dam😍</p></dialog></a
-    >
-    <a href="http://naver.com" target="_blank"><img src="image/test.png" /></a>
-    <form>
-      <!--
-      <label for="profile">Profile Photo</label>
-      <input id="profile" type="file" accept="image/*,.pdf" />
-
-      <label for="first">First name</label>
-      <input id="first" required placeholder="Name" type="text" />
-
-      <input required placeholder="Last Name" type="text" />
-      <input required placeholder="Username" minlength="10" type="text" />
-      <input required placeholder="Password" type="password" />
-      -->
-      <label for="website">Website</label>
-      <!--<input id="website" required palceholder="Url" type="url" /> -->
-      <input id="website" required placeholder="Email" type="email" />
-      <input type="submit" value="Create Account" />
-    </form>
-  </body>
+<html lang = "ko">
+<head>
+  <title>🦇warhammer underworld🦇</title>
+  <link rel = "shourt icon" href = "image/steam.ico" />
+  <meta charset="utf-8" />
+  <meta name="descripiton" content="I love Dam" />
+</head>
+<body>
+  <a href = "http://google.com" target="_blank"><dialog open><p>🐶I love Dam🐶</p></dialog></a>
+  <a href = "https://warhammerunderworlds.com/" target="_blank"><img src="image/test.png" /></a>
+  <label for="website">Website</label>
+  <input id ="website" required placeholder="Email" type="email" />
+  <input type="submit" value = "Send Email" />
+</body>
 </html>
