--- a/leelovedam.html
+++ b/leelovedam.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang = "ko">
-<head>
-  <title>🦇warhammer underworld🦇</title>
-  <link rel = "shourt icon" href = "image/steam.ico" />
-  <meta charset="utf-8" />
-  <meta name="descripiton" content="I love Dam" />
-</head>
-<body>
-  <a href = "http://google.com" target="_blank"><dialog open><p>🐶I love Dam🐶</p></dialog></a>
-  <a href = "https://warhammerunderworlds.com/" target="_blank"><img src="image/test.png" /></a>
-  <label for="website">Website</label>
-  <input id ="website" required placeholder="Email" type="email" />
-  <input type="submit" value = "Send Email" />
-</body>
+<html lang="ko">
+  <head>
+    <title>🦇warhammer underworld🦇</title>
+    <link rel="shortcut icon" href="image/steam.ico" />
+    <meta charset="utf-8" />
+    <meta name="description" content="I love Dam" />
+  </head>
+  <body>
+    <a href="https://warhammerunderworlds.com/" target="_blank"><dialog open><p>warhammer underworld</p></dialog></a>
+    <a href="https://warhammerunderworlds.com/" target="_blank"><img src="image/test.png" /></a>
+    <label for="website">Website</label>
+    <input id="website" required placeholder="Email" type="email" />
+    <input type="submit" value="Send mail" />
+  </body>
 </html>
