change form commit

--- a/leelovedam.html
+++ b/leelovedam.html
@@ -9,8 +9,10 @@
   <body>
     <a href="https://warhammerunderworlds.com/" target="_blank"><dialog open><p>warhammer underworld</p></dialog></a>
     <a href="https://warhammerunderworlds.com/" target="_blank"><img src="image/test.png" /></a>
-    <label for="website">Website</label>
-    <input id="website" required placeholder="Email" type="email" />
-    <input type="submit" value="Send mail" />
+    <form>
+      <label for="website">Website</label>
+      <input id="website" required placeholder="Email" type="email" />
+      <input type="submit" value="Create Account" />
+    </form>
   </body>
 </html>
