commit new html

--- a/leelovedam.html
+++ b/leelovedam.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <title>🦇warhammer underworld🦇</title>
+    <title>Home - 🦉Dam🦉</title>
     <link rel="shortcut icon" href="image/steam.ico" />
     <meta charset="utf-8" />
     <meta name="description" content="I love Dam" />
   </head>
   <body>
-    <a href="https://warhammerunderworlds.com/" target="_blank"><dialog open><p>warhammer underworld</p></dialog></a>
-    <a href="https://warhammerunderworlds.com/" target="_blank"><img src="image/test.png" /></a>
+    <a href = "https://warhammerunderworlds.com/" target="_blank"><h1>I love Dam</h1></a>
+    <a href = "https://warhammerunderworlds.com/" target="_blank"><img src="image/underworld00.jpg" /></a>
     <form>
       <label for="website">Website</label>
       <input id="website" required placeholder="Email" type="email" />
-      <input type="submit" value="Create Account" />
+      <input type="submit" value="Send Mail" />
     </form>
   </body>
 </html>
