--- a/leelovedam.html
+++ b/leelovedam.html
@@ -2,17 +2,39 @@
 <html lang="ko">
   <head>
     <title>Home - 🦉Dam🦉</title>
-    <link rel="shortcut icon" href="image/steam.ico" />
+    <link rel="shortcut icon" href="image/steam.ico" />    
     <meta charset="utf-8" />
     <meta name="description" content="I love Dam" />
+    <style>
+      html{
+        background-color: tomato;
+      }
+      body{
+        margin: 20px 15px 10px 5px;
+        background-color: teal;
+      }
+      div{
+        margin: 2px 5px 10px 7px;
+        height: 150px;
+        width: 150px;
+        background-color: whitesmoke;
+      }
+    </style>
   </head>
   <body>
-    <a href = "https://warhammerunderworlds.com/" target="_blank"><h1>I love Dam</h1></a>
-    <a href = "https://warhammerunderworlds.com/" target="_blank"><img src="image/underworld00.jpg" /></a>
+    <!--
+    <header>
+      <a href = "https://warhammerunderworlds.com/" target="_blank"><h1>I love Dam</h1></a>
+    </header>
+    <main>
+      <a href = "https://warhammerunderworlds.com/" target="_blank"><img src="image/underworld00.jpg" /></a> 
+    </main>
     <form>
       <label for="website">Website</label>
       <input id="website" required placeholder="Email" type="email" />
       <input type="submit" value="Send Mail" />
     </form>
+     -->
+     <div></div>
   </body>
 </html>
